--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "app.js",
   "scripts": {
     "start": "nodemon server.js",
-    "build": "NODE_ENV=production nodemon server.js"
+    "build": "NODE_ENV=production nodemon server.js",
+    "debug": "ndb server.js"
   },
   "author": "Timothy Lubanga",
   "license": "ISC",
@@ -15,12 +16,15 @@
     "express": "^4.17.1",
     "express-mongo-sanitize": "^1.3.2",
     "express-rate-limit": "^5.0.0",
+    "fork-ts-checker-webpack-plugin": "^4.0.3",
     "helmet": "^3.21.2",
     "hpp": "^0.2.3",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9",
     "morgan": "^1.9.1",
+    "multer": "^1.4.2",
     "nodemailer": "^6.4.2",
+    "sharp": "^0.25.1",
     "validator": "^12.2.0",
     "xss-clean": "^0.1.1"
   },
@@ -33,7 +37,9 @@
     "eslint-plugin-node": "^8.0.1",
     "eslint-plugin-prettier": "^3.1.2",
     "eslint-plugin-react": "^7.18.0",
+    "ndb": "^1.1.5",
     "nodemon": "^2.0.2",
+    "npm-run-all": "^4.1.5",
     "prettier": "^1.19.1"
   }
 }
